--- a/fx-views/src/main/resources/editMusicInfoForm.fxml
+++ b/fx-views/src/main/resources/editMusicInfoForm.fxml
@@ -4,7 +4,7 @@
   ~ /*
   ~ ' _   _ ______ _   _
   ~ | | | ||  ___| | | |                            Copyright -  AdamClmns 2020-03
-  ~ | | | || |_  | | | |                                                                                
+  ~ | | | || |_  | | | |
   ~ | | | ||  _| | | | |
   ~ | |_| || |_  | |_| |
   ~  \___(_)_(_)  \___(_)
@@ -26,7 +26,7 @@
 <?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
-      fx:controller="com.adamclmns.ufo.fx.controllers.EditMusicInfoForm"
+      fx:controller="com.adamclmns.jamm.fx.views.controllers.EditMusicInfoForm"
       prefHeight="400.0" prefWidth="600.0">
     <HBox>
         <Label text="Artist"/>
