--- a/fx-ui/src/main/resources/mediaView.fxml
+++ b/fx-ui/src/main/resources/mediaView.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 
-
+<?import javafx.scene.control.TableView?>
 <TableView
         xmlns:fx="http://javafx.com/fxml"
         xmlns="http://javafx.com/javafx"
